--- a/index.html
+++ b/index.html
@@ -58,9 +58,8 @@ body, html {
   <div class="w3-white w3-xlarge" style="width:100%;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16">
-    <i class="fa fa-phone fa-fw w3-hover-opacity"></i>
-    <i class="fa fa-envelope fa-fw w3-hover-opacity"></i>
-    <i class="fa fa-linkedin fa-fw w3-hover-opacity"></i>
+    <i class="fa fa-envelope fa-fw w3-hover-opacity"></i> 
+    <i class="fa fa-linkedin fa-fw w3-hover-opacity" onclick="w3_open(https://www.linkedin.com/in/fatima-gonzalez-gonzalez/)"></i>
     <i class="fa fa-instagram fa-fw w3-hover-opacity"></i>
     <i class="fa a-brands fa-fw fa-behance w3-hover-opacity"></i>
 
