--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@ body, html {
     <i class="fa fa-envelope fa-fw w3-hover-opacity"></i> 
     <i class="fa fa-linkedin fa-fw w3-hover-opacity" onclick="w3_open(https://www.linkedin.com/in/fatima-gonzalez-gonzalez/)"></i>
     <i class="fa fa-instagram fa-fw w3-hover-opacity"></i>
-    <i class="fa a-brands fa-fw fa-behance w3-hover-opacity"></i>
-
+    <i class="fa a-brands fa-fw fa-behance w3-hover-opacity"></i>&nbsp&nbsp&nbsp&nbsp
   	</div>
-    <div class="w3-center w3-padding-16"> F </div>
+    <div class="w3-center w3-padding-16"> &nbsp </div>
   </div>
 </div>
   
