--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/f.png");
+  background-image: url("/lon.png");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/f.png");
+  background-image: url("/flo.png");
   min-height: 400px;
 }
 </style>
@@ -82,8 +82,12 @@ body, html {
   <hr id="about">
 
   <div class="w3-container w3-padding-32 w3-center">  
-    <h3>About Me, The Food Man</h3><br>
-    <img src="/FG.png" alt="Me" class="w3-image" style="display:block;margin:auto" width="800" height="533">
+    img {src="f.jpg" 
+  max-width: 100%;
+  height: auto;
+  }
+    <h3>Creative scientist</h3><br>
+    <img src="/FG.png" alt="Me" class="w3-image" style="display:block;margin:auto" width="400" height=auto>
     <div class="w3-padding-32">
       <h4><b>I am Who I Am!</b></h4>
       <h6><i>With Passion For Real, Good Food</i></h6>
