--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/lon.png");
+  background-image: url("/lon.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/flo.png");
+  background-image: url("/flo.jpg");
   min-height: 400px;
 }
 </style>
@@ -82,10 +82,7 @@ body, html {
   <hr id="about">
 
   <div class="w3-container w3-padding-32 w3-center">  
-    img {src="f.jpg" 
-  max-width: 100%;
-  height: auto;
-  }
+   <img src="f.jpg" max-width:100% height:auto}>
     <h3>Creative scientist</h3><br>
     <img src="/FG.png" alt="Me" class="w3-image" style="display:block;margin:auto" width="400" height=auto>
     <div class="w3-padding-32">
