--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@ body, html {
 /* Second image (Portfolio) */
 .bgimg-2 {
   background-image: url("/lon.jpg");
-  min-height: 400px;
+  min-height: 100%;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
   background-image: url("/flo.jpg");
-  min-height: 400px;
+  min-height: 100%;
 }
 </style>
 </head>
@@ -49,8 +49,12 @@ body, html {
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()"
   class="w3-bar-item w3-button">Close</a>
-  <a href="#food" onclick="w3_close()" class="w3-bar-item w3-button">Work</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
+  <a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button">Portfolio</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">Contact</a>
+
+
+
 </nav>
 
 <!-- Top menu --> style="width:100%"
@@ -72,7 +76,7 @@ body, html {
 <!-- Third Parallax Image with Portfolio Text -->
 <div class="bgimg-3 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
-     <span class="w3-xxlarge w3-text-white w3-wide">FÁTIMA GONZÁLEZ GONZÁLEZ</span>
+     <span class="w3-xxlarge w3-text-white w3-wide"> &nbsp </span>
   </div>
 </div>
 
@@ -82,7 +86,7 @@ body, html {
   <hr id="about">
 
   <div class="w3-container w3-padding-32 w3-center">  
-   <img src="f.jpg" max-width:100% height:auto}>
+   <img src="f.PNG" max-width:100% height:auto}>
     <h3>Creative scientist</h3><br>
     <img src="/FG.png" alt="Me" class="w3-image" style="display:block;margin:auto" width="400" height=auto>
     <div class="w3-padding-32">
