--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@ body, html {
 /* First image (Logo. Full height) */
 .bgimg-1 {
   background-image: url('/lon.jpg');
-  min-height: 100%;
+  min-height: 400px;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
   background-image: url("/lon.jpg");
-  min-height: 100%;
+  min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
   background-image: url("/flo.jpg");
-  min-height: 100%;
+  min-height: 400px;
 }
 </style>
 </head>
