--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body, html {
 <!-- Sidebar (hidden by default) -->
 <nav class="w3-sidebar w3-bar-block w3-card w3-top w3-xlarge w3-animate-left" style="display:none;z-index:2;width:40%;min-width:300px" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()"
-  class="w3-bar-item w3-button">Close</a>
+  class="w3-bar-item w3-button">Close menu</a>
   <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">About</a>
   <a href="#portfolio" onclick="w3_close()" class="w3-bar-item w3-button">Portfolio</a>
   <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">Contact</a>
@@ -86,9 +86,9 @@ body, html {
   <hr id="about">
 
   <div class="w3-container w3-padding-32 w3-center">  
-   <img src="f.PNG" max-width:100% height:auto}>
+    <img src="/f.PNG" max-width:100% height:auto>
     <h3>Creative scientist</h3><br>
-    <img src="/FG.png" alt="Me" class="w3-image" style="display:block;margin:auto" width="400" height=auto>
+    <img src="/FG.png" alt="Fatima Gonzalez" class="w3-image" style="display:block;margin:auto" width="300" height=auto>
     <div class="w3-padding-32">
       <h4><b>I am Who I Am!</b></h4>
       <h6><i>With Passion For Real, Good Food</i></h6>
