--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/lon.jpg");
+  background-image: url("/lon2.jpg");
   min-height: 400px;
 }
 
@@ -86,8 +86,9 @@ body, html {
   <hr id="about">
 
   <div class="w3-container w3-padding-32 w3-center">  
-    <img src="/f.PNG" max-width:100% height:auto>
+    <img src="/f.png" max-width:100% height:auto>
     <h3>Creative scientist</h3><br>
+    <img src="/fr-FG.png" alt="Fatima Gonzalez" class="w3-image" style="display:block;margin:auto" width="600" height=auto>
     <img src="/FG.png" alt="Fatima Gonzalez" class="w3-image" style="display:block;margin:auto" width="300" height=auto>
     <div class="w3-padding-32">
       <h4><b>I am Who I Am!</b></h4>
@@ -183,7 +184,7 @@ body, html {
 </div>
 
 <!-- Third Parallax Image -->
-<div class="bgimg-2 w3-display-container w3-hover-opacity">
+<div class="bgimg-2 w3-display-container w3-opacity-min">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
   </div>
