--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/lon2.jpg");
+  background-image: url("/lon2.png");
   min-height: 400px;
 }
 
@@ -87,13 +87,10 @@ body, html {
 
   <div class="w3-container w3-padding-32 w3-center">  
     <img src="/f.png" max-width:100% height:auto>
-    <h3>Creative scientist</h3><br>
-    <img src="/fr-FG.png" alt="Fatima Gonzalez" class="w3-image" style="display:block;margin:auto" width="600" height=auto>
-    <img src="/FG.png" alt="Fatima Gonzalez" class="w3-image" style="display:block;margin:auto" width="300" height=auto>
+    <img src="/fr-FG2.png" alt="Fatima Gonzalez" class="w3-image" style="display:block;margin:auto" width="700" height=auto>
     <div class="w3-padding-32">
-      <h4><b>I am Who I Am!</b></h4>
-      <h6><i>With Passion For Real, Good Food</i></h6>
-      <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+      <h3>Creative scientist</h3><br>
+      <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy and a solid background in bioinformatics and data analysis. I am known for my analytical thinking, creative problem-solving, and strong attention to detail; along with a kind personality and good people skills that enable me to lead and collaborate in a fast-paced environment. My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
     </div>
   </div>
   <hr>
@@ -193,7 +190,7 @@ body, html {
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
   <h3 class="w3-center">WHERE I AM BASED</h3>
-  <p class="w3-center"><em>I'd love to meet up!</em></p>
+  <p class="w3-center">I'd love to meet up!</p>
 
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
