--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@ body, html {
   <hr id="about">
 
   <div class="w3-container w3-padding-32 w3-center">  
-    <img src="/fggphoto.png" max-width:100% height:auto>
+    <img src="/fgh.png" max-width:100% height:auto>    
+    <img src="/fr-FG3.png" width:"700" height:auto>
+
     <div class="w3-padding-32">
       <h3>Creative scientist</h3><br>
       <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy and a solid background in bioinformatics and data analysis. I am known for my analytical thinking, creative problem-solving, and strong attention to detail; along with a kind personality and good people skills that enable me to lead and collaborate in a fast-paced environment. My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
