--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@ body, html {
 
     <div class="w3-padding-32">
       <h3>Creative scientist</h3><br>
-      <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy and a solid background in bioinformatics and data analysis. I am known for my analytical thinking, creative problem-solving, and strong attention to detail; along with a kind personality and good people skills that enable me to lead and collaborate in a fast-paced environment. My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
+      <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy 
+        and a solid background in bioinformatics and data analysis. 
+        I am known for my analytical thinking, creative problem-solving, and strong attention to detail; 
+        along with a kind personality and good people skills that enable me to lead and collaborate in a fast-paced environment. 
+        My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
     </div>
   </div>
   <hr>
