--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body, html {
       <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
         and a solid background in bioinformatics and data analysis. <br>
         I am known for my analytical thinking, creative problem-solving, and strong attention to detail; <br>
-        along with a kind personality and good people skills that enable me to lead and collaborate in a fast-paced environment. <br>
+        along with a friendly personality and good people skills that enable me to lead and collaborate in a fast-paced environment. <br>
         My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
     </div>
   </div>
