--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/bow.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountainsHere are some of my latest lorem work ipsum tipsum">
+      <img src="/p.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Scientific poster presentation at TechBio 2023 event in London">
     </div>
 
     <div class="w3-col m3">
