--- a/index.html
+++ b/index.html
@@ -41,6 +41,19 @@ body, html {
   background-image: url("/flo.jpg");
   min-height: 400px;
 }
+
+img {
+    max-width: 25%;
+    max-height:15%;
+    float: right;
+  }
+  
+  .text {
+    font-size: 20px;
+    padding-left: 20px;
+    padding-top: 20%;
+    float: left;
+  }
 </style>
 </head>
 <body>
@@ -89,6 +102,19 @@ body, html {
         My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
     </div>
   </div>
+
+  <div class="container">
+      <div class="image">
+        <img src="/photo.jpg">
+      </div>
+      <div class="text">
+        <h1>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy and 
+          a solid background in bioinformatics and data analysis. I am known for my analytical thinking, creative problem-solving,
+          and strong attention to detail;
+          along with a friendly personality and good people skills that enable me to lead and collaborate in a fast-paced environment.
+          I would love to work pushing the frontiers of biotech through a multidisciplinary perspective.</h1>
+      </div>
+    </div>
   <hr>
   
 
