--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ img {
 
   <div class="container">
       <div class="image">
-        <img src="/photo.jpg">
+        <img src="/photo.png">
       </div>
       <div class="text">
         <h1>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy and 
