--- a/index.html
+++ b/index.html
@@ -42,18 +42,6 @@ body, html {
   min-height: 400px;
 }
 
-img {
-    max-width: 25%;
-    max-height:15%;
-    float: right;
-  }
-  
-  .text {
-    font-size: 20px;
-    padding-left: 20px;
-    padding-top: 20%;
-    float: left;
-  }
 </style>
 </head>
 <body>
@@ -91,6 +79,7 @@ img {
 
   <div class="w3-container w3-padding-32 w3-center">
     <img src="/fgh.png" style="width:80%;height:auto;">    
+    <img src="/photo.png" style="width:80%;height:auto;">    
 
     <div class="w3-padding-32">
       <h3>Creative scientist</h3><br>
@@ -102,18 +91,7 @@ img {
     </div>
   </div>
 
-  <div class="container">
-      <div class="image">
-        <img src="/photo.png">
-      </div>
-      <div class="text">
-        <h1>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy and 
-          a solid background in bioinformatics and data analysis. I am known for my analytical thinking, creative problem-solving,
-          and strong attention to detail;
-          along with a friendly personality and good people skills that enable me to lead and collaborate in a fast-paced environment.
-          I would love to work pushing the frontiers of biotech through a multidisciplinary perspective.</h1>
-      </div>
-    </div>
+ 
   <hr>
   
 
