--- a/index.html
+++ b/index.html
@@ -88,15 +88,20 @@ body, html {
         I am known for my analytical thinking, creative problem-solving, and strong attention to detail; <br>
         along with a friendly personality and good people skills that enable me to lead and collaborate in a fast-paced environment. <br>
         My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
+
+      <h3>Educationt</h3><br>
+      <p><strong>MSc Systems and Synthetic Biology</strong><br>
+        The University of Edinburgh<br>
+        <strong>BSc Hons Biochemistry</strong><br>
+        Universidad Autónoma de Madrid<br>
+
     </div>
   </div>
 
- 
   <hr>
   
 
   </div>
-  
   
   </div>
 </div>
