--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ body, html {
 
   <div class="w3-container w3-padding-32 w3-center">
     <img src="/fgh.png" style="width:80%;height:auto;">    
-    <img src="/photo.png" style="width:80%;height:auto;">    
+    <img src="/photo.png" style="width:300px;height:auto;">    
 
     <div class="w3-padding-32">
       <h3>Creative scientist</h3><br>
