--- a/index.html
+++ b/index.html
@@ -82,18 +82,17 @@ body, html {
     <img src="/photo.png" style="width:300px;height:auto;">    
 
     <div class="w3-padding-32">
-      <h3>Creative scientist</h3><br>
-      <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
+      <p><strong>CREATIVE SCIENTIST</strong><br>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
         and a solid background in bioinformatics and data analysis. <br>
         I am known for my analytical thinking, creative problem-solving, and strong attention to detail; <br>
         along with a friendly personality and good people skills that enable me to lead and collaborate in a fast-paced environment. <br>
         My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
 
-      <h4>Educationt</h4><br>
-      <p><strong>MSc Systems and Synthetic Biology</strong><br>
-        The University of Edinburgh<br>
+        <p><strong>EDUCATION</strong><br>      
+        <strong>MSc Systems and Synthetic Biology</strong><br>
+        <em>The University of Edinburgh</em><br>
         <strong>BSc Hons Biochemistry</strong><br>
-        Universidad Autónoma de Madrid<br>
+        <em>Universidad Autónoma de Madrid</em><br></p>
 
     </div>
   </div>
