--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@ body, html {
         My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
 
         <p><strong>EDUCATION</strong><br>      
-        <strong>MSc Systems and Synthetic Biology</strong><br>
+        <strong>MSc in Systems and Synthetic Biology</strong><br>
         <em>The University of Edinburgh</em><br>
-        <strong>BSc Hons Biochemistry</strong><br>
+        <strong>BSc in Hons Biochemistry</strong><br>
         <em>Universidad Autónoma de Madrid</em><br></p>
 
     </div>
