--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ body, html {
   <div class="w3-white w3-xlarge" style="width:100%;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16">
-    <a href="mailto:fatimagonzalezglez@gmail.com"> <i class="fa fa-envelope fa-fw w3-hover-opacity"></a> 
-    <a href=https://www.linkedin.com/in/fatima-gonzalez-gonzalez/><i class="fa fa-linkedin fa-fw w3-hover-opacity"></a>
-    <a href=https://www.instagram.com/fatimitaglez/><i class="fa fa-instagram fa-fw w3-hover-opacity"></a>
-    <a href=https://www.behance.net/fatimaglezglez><i class="fa a-brands fa-fw fa-behance w3-hover-opacity"></a>&nbsp&nbsp&nbsp&nbsp
+    <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"> <i class="fa fa-envelope fa-fw w3-hover-opacity"></i></a> 
+    <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"/><i class="fa fa-linkedin fa-fw w3-hover-opacity"></i></a>
+    <a href="https://www.instagram.com/fatimitaglez/" target="_blank"><i class="fa fa-instagram fa-fw w3-hover-opacity"></i></a>
+    <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance w3-hover-opacity"></i></a>&nbsp&nbsp&nbsp&nbsp
   	</div>
     <div class="w3-center w3-padding-16"> &nbsp </div>
   </div>
