--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ body, html {
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
         <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> London, UK<br>
-         <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"> <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> fatimagonzalezglez@gmail.com<br>
+         <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"> <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i></a> fatimagonzalezglez@gmail.com<br>
       </div>
       <p>If you have a job opportunity or simply would like to chat, please get in touch!</p>
   
