--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ body, html {
 
         <p><strong>EDUCATION</strong><br>      
         <strong>MSc in Systems and Synthetic Biology</strong><br>
-        <em>The University of Edinburgh</em><br>
+        The University of Edinburgh<br>
         <strong>BSc in Hons Biochemistry</strong><br>
-        <em>Universidad Autónoma de Madrid</em><br></p>
+        Universidad Autónoma de Madrid<br></p>
 
     </div>
   </div>
