--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/lon.jpg");
+  background-image: url("/lon3.png");
   min-height: 400px;
 }
 
