--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ body, html {
     <div class="w3-right w3-padding-16">
     <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"> <i class="fa fa-envelope fa-fw w3-hover-opacity"></i></a> 
     <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"/><i class="fa fa-linkedin fa-fw w3-hover-opacity"></i></a>
+     <a href="https://github.com/fatimaglezglez" target="_blank"/><i class="fa fa-github fa-fw w3-hover-opacity"></i>
     <a href="https://www.instagram.com/fatimitaglez/" target="_blank"><i class="fa fa-instagram fa-fw w3-hover-opacity"></i></a>
     <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance w3-hover-opacity"></i></a>&nbsp&nbsp&nbsp&nbsp
   	</div>
