--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body, html {
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/flo.jpg");
+  background-image: url("/b.jpg");
   min-height: 400px;
 }
 
@@ -79,9 +79,11 @@ body, html {
   <hr id="about">
 
   <div class="w3-container w3-padding-32 w3-center">
+    <!--
     <img src="/fgh.png" style="width:80%;height:auto;">    
     <img src="/photo.png" style="width:300px;height:auto;">    
-
+    -->
+    <img src="/FG.png" style="width:300px;height:auto;">    
     <div class="w3-padding-32">
       <p><strong>CREATIVE SCIENTIST</strong><br>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
         and a solid background in bioinformatics and data analysis. <br>
