--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/lon.jpg');
+  background-image: url('/bb.jpg');
   min-height: 400px;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/lon1.jpg");
+  background-image: url("/bb.jpg");
   min-height: 400px;
 }
 
@@ -83,7 +83,7 @@ body, html {
     <img src="/fgh.png" style="width:80%;height:auto;">    
     <img src="/photo.png" style="width:300px;height:auto;">    
     -->
-    <img src="/FG.png" style="width:300px;height:auto;">    
+    <img src="/f-c.png" style="width:300px;height:auto;">    
     <div class="w3-padding-32">
       <p><strong>CREATIVE SCIENTIST</strong><br>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
         and a solid background in bioinformatics and data analysis. <br>
@@ -195,7 +195,7 @@ body, html {
   <h3 class="w3-center">WHERE I AM BASED</h3>
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="/map.jpeg" class="w3-image w3-round" style="width:100%">
+      <img src="/lon.jpg" class="w3-image w3-round" style="width:100%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
