--- a/index.html
+++ b/index.html
@@ -110,16 +110,16 @@ body, html {
 
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Science</span><br>
+    <span class="w3-xlarge">SCIENCE</span><br>
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Data</span><br>
+    <span class="w3-xlarge">DATA</span><br>
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Strategy</span><br>
+    <span class="w3-xlarge">STRATEGY</span><br>
   </div>
   <div class="w3-quarter w3-section">
-    <span class="w3-xlarge">Ethics</span><br>
+    <span class="w3-xlarge">ETHICS</span><br>
     
   </div>
 </div>
