--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@ body, html {
   <hr id="about">
 
   <div class="w3-container w3-padding-32 w3-center">
-    <img src="/fgh.png" style="width:80%;height:auto;">    
-    <img src="/f-c.png" style="width:300px;height:auto;">    
+    <img src="/heading.png" style="width:100%;height:auto;">    
     <div class="w3-padding-32">
-      <p><strong>CREATIVE SCIENTIST</strong><br>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
+      <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
         and a solid background in bioinformatics and data analysis. <br>
         I am known for my analytical thinking, creative problem-solving, and strong attention to detail; <br>
         along with a friendly personality and good people skills that enable me to lead and collaborate in a fast-paced environment. <br>
         My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
+   
+      <img src="/f-c.png" style="width:300px;height:auto;">    
 
         <p><strong>EDUCATION</strong><br>      
         <strong>MSc in Systems and Synthetic Biology</strong><br>
