--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/bb.jpg');
+  background-image: url('/heading.jpg');
   min-height: 400px;
 }
 
@@ -77,9 +77,13 @@ body, html {
 
  
   <hr id="about">
+  <div class="bgimg-1 w3-display-container w3-opacity-min">
+    <div class="w3-display-middle">
+    </div>
+  </div>
 
   <div class="w3-container w3-padding-32 w3-center">
-    <img src="/heading.png" style="width:100%;height:auto;">    
+    <!-- <img src="/heading.png" style="width:100%;height:auto;">  -->
     <div class="w3-padding-32">
       <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
         and a solid background in bioinformatics and data analysis. <br>
