--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Fatima G. Gonzalez - Professional profile</title>
-<link rel="shortcut icon" type="image/png" href="/FG-blue.png">
+<link rel="shortcut icon" type="image/png" href="/FGG.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -91,7 +91,7 @@ body, html {
         along with a friendly personality and good people skills that enable me to lead and collaborate in a fast-paced environment. <br>
         My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
    
-      <img src="/f-c.png" style="width:300px;height:auto;">    
+      <img src="/f-col.png" style="width:300px;height:auto;">    
 
         <p><strong>EDUCATION</strong><br>      
         <strong>MSc in Systems and Synthetic Biology</strong><br>
