--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ body, html {
   <div class="w3-white w3-xlarge" style="width:100%;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16">
+    <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV"> <i class="img" source="/CV.png"></i></a> 
     <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"> <i class="fa fa-envelope fa-fw w3-hover-opacity"></i></a> 
     <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"/><i class="fa fa-linkedin fa-fw w3-hover-opacity"></i></a>
      <a href="https://github.com/fatimaglezglez" target="_blank"/><i class="fa fa-github fa-fw w3-hover-opacity"></i></a>
