--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: optima, sans-serif;}
 body, html {
   height: 100%;
   color: #777;
-  line-height: 4;
+  line-height: 1.8;
 }
 
 /* Create a Parallax Effect */
@@ -26,7 +26,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/heading.jpg');
+  background-image: url('/heading.png');
   min-height: 200px;
 }
 
