--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body, html {
 /* First image (Logo. Full height) */
 .bgimg-1 {
   background-image: url('/heading.png');
-  min-height: 200px;
+  min-height: 600px;
 }
 
 /* Second image (Portfolio) */
@@ -42,6 +42,12 @@ body, html {
   min-height: 400px;
 }
 
+.icon {
+  background: url('/CV.png');
+   height: 20px;
+   width: 20px;
+   display: block;
+}
 </style>
 </head>
 <body>
@@ -61,7 +67,7 @@ body, html {
   <div class="w3-white w3-xlarge" style="width:100%;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16">
-    <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV"><img src="/CV.png" style="width:10%"></a> 
+    <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV"><i class="icon"></i></a> 
     <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"> <i class="fa fa-envelope fa-fw w3-hover-opacity"></i></a> 
     <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"/><i class="fa fa-linkedin fa-fw w3-hover-opacity"></i></a>
      <a href="https://github.com/fatimaglezglez" target="_blank"/><i class="fa fa-github fa-fw w3-hover-opacity"></i></a>
