--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@ body, html {
 /* First image (Logo. Full height) */
 .bgimg-1 {
   background-image: url('/heading.png');
-  min-height: 600px;
+  min-height: 200px;
+  width:100%
 }
 
 /* Second image (Portfolio) */
