--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ body, html {
         My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
    
       <img src="/f-col.png" style="width:300px;height:auto;">    
-        <strong>MSc in Systems and Synthetic Biology</strong><br>
+        <p></p><strong>MSc in Systems and Synthetic Biology</strong><br>
         The University of Edinburgh<br>
         <strong>BSc in Hons Biochemistry</strong><br>
         Universidad Autónoma de Madrid<br></p>
