--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ body, html {
 }
 
 .icon {
-  background: url('/CV.png');
+   background: url('/CV.png');
    height: 10px;
    width: 10px;
    display: block;
@@ -68,10 +68,10 @@ body, html {
   <div class="w3-white w3-xlarge" style="width:100%;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16">
-    <!-- <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV"><i class="icon w3-hover-opacity"></i></a> -->
+    <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV"><i class="icon w3-hover-opacity"></i></a> 
     <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"> <i class="fa fa-envelope fa-fw w3-hover-opacity"></i></a> 
     <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"/><i class="fa fa-linkedin fa-fw w3-hover-opacity"></i></a>
-     <a href="https://github.com/fatimaglezglez" target="_blank"/><i class="fa fa-github fa-fw w3-hover-opacity"></i></a>
+    <a href="https://github.com/fatimaglezglez" target="_blank"/><i class="fa fa-github fa-fw w3-hover-opacity"></i></a>
     <a href="https://www.instagram.com/fatimitaglez/" target="_blank"><i class="fa fa-instagram fa-fw w3-hover-opacity"></i></a>
     <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance w3-hover-opacity"></i></a>&nbsp&nbsp&nbsp&nbsp
   	</div>
