--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@ body, html {
         I am known for my analytical thinking, creative problem-solving, and strong attention to detail; <br>
         along with a friendly personality and good people skills that enable me to lead and collaborate in a fast-paced environment. <br>
         My commitment lies in pushing the frontiers of biotech through a multidisciplinary perspective.</p>
-   
+      <span class="w3-text-white">FATIMA GONZALEZ GONZALEZ</span>
       <img src="/f-col.png" style="width:300px;height:auto;">    
-        <p></p><strong>MSc in Systems and Synthetic Biology</strong><br>
+        <p><strong>MSc in Systems and Synthetic Biology</strong><br>
         The University of Edinburgh<br>
         <strong>BSc in Hons Biochemistry</strong><br>
         Universidad Autónoma de Madrid<br></p>
