--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body, html {
 <div class="w3-top" style="position: relative;">
   <div class="w3-white w3-xlarge" style="width:100%;margin:auto; display: flex; align-items: center;">
     <div class="w3-button w3-padding-16" onclick="w3_open()">☰</div>
-    <div class="w3-right w3-padding-16" style="display: flex; align-items: center;">
+    <div class="w3-padding-16" style="display: flex; align-items: center; margin-left: auto;">
       <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV" style="margin-right: 10px;">
         <img src="/CV.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
       </a> 
