--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ body, html {
       <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
       <a href="https://github.com/fatimaglezglez" target="_blank"><i class="fa fa-github fa-fw"></i></a>
       <a href="https://www.instagram.com/fatimitaglez/" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
-      <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance"></i></a>
+      <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance"></i></a>&nbsp&nbsp&nbsp&nbsp
     </div>
   </div>
 </div>
