--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ body, html {
   </div>
 </div> -->
 <!-- Top menu -->
-<div class="w3-top" style="position: relative;">
-  <div class="w3-white w3-xlarge" style="width:100%;margin:auto; display: flex; align-items: center;">
+<div class="w3-top" style="position: fixed; width: 100%; z-index: 1;">
+  <div class="w3-white w3-xlarge" style="width: 100%; margin: auto; display: flex; align-items: center;">
     <div class="w3-button w3-padding-16" onclick="w3_open()">☰</div>
     <div class="w3-padding-16" style="display: flex; align-items: center; margin-left: auto;">
       <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV" style="margin-right: 10px;">
@@ -82,10 +82,13 @@ body, html {
       <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
       <a href="https://github.com/fatimaglezglez" target="_blank"><i class="fa fa-github fa-fw"></i></a>
       <a href="https://www.instagram.com/fatimitaglez/" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
-      <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance"></i></a>&nbsp&nbsp&nbsp&nbsp
+      <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance"></i></a>
     </div>
   </div>
 </div>
+
+<!-- !PAGE CONTENT! -->
+<!-- Your page content goes here without the divider line -->
 
 
 
