--- a/index.html
+++ b/index.html
@@ -238,5 +238,10 @@ function w3_close() {
 }
 </script>
 
+
+<img src="/caro.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
+
+
+  
 </body>
 </html>
