--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@ function w3_close() {
 </script>
 
 
-<img src="/caro.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
+<img src="/caronegro.icn.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
+<img src="/fn.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
 
 
   
